--- a/app/views/places/_contributor.html.erb
+++ b/app/views/places/_contributor.html.erb
@@ -1,3 +1,7 @@
-<%= contributor.image %>
+<div class="header">
+  <%= contributor.title %>
+  <%= contributor.image %>
+</div>
+
 <%= contributor.description %>
 <%= contributor.link_list %>
